# jslt

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: anonymize-id.jslt  flatten.jslt
macro/: Cargo.toml
macro/src/: lib.rs
node/: .npmignore  Cargo.toml  Makefile  README.md  check-bin.js  check-bin.sh  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
node/distributions/darwin-arm64/: package.json
node/distributions/darwin-x64/: package.json
node/distributions/darwin-x86/: package.json
node/distributions/linux-arm64/: package.json
node/distributions/linux-x64/: package.json
node/distributions/linuxmusl-arm64/: package.json
node/distributions/linuxmusl-x64/: package.json
node/distributions/win32-x64/: package.json
node/distros/darwin-arm64/: package.json
node/distros/darwin-x86/: package.json
node/src/: convert.rs  lib.rs
src/: context.rs  error.rs  format.rs  lib.rs  macros.rs  main.rs  parser.rs  transform.rs
src/context/: builtins.rs
src/parser/: builder.rs  jslt.pest  lexer.rs  value.rs
src/parser/value/: accessor.rs  array.rs  object.rs
src/transform/: expr.rs  value.rs
src/transform/value/: accessor.rs  array.rs  object.rs
