[package]
name = "jslt"
description = "Everyones favorite xslt but for json"
version = "0.0.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
exclude = [
	".DS_Store",
	".github",
	"**/*.jslt"
]

[dependencies]
pest = { version = "2.7", default-features = false }
pest_derive = { version = "2.7", default-features = false }
rand = "0.8"
regex-lite = "0.1"
rstest = "0.18"
serde = "1"
serde_json = "1"
sha256 = "1"
thiserror = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["std"]
std = []

[lib]
crate-type = ["dylib"]

[workspace]
members = [
	"node"
]

[workspace.package]
edition = "2021"
repository = "https://github.com/DmitryDodzin/jslt.git"
license = "MIT"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
