[package]
name = "jslt"
description = "Everyones favorite xslt but for json"
version = "0.0.3"
edition.workspace = true
repository.workspace = true
license.workspace = true
exclude = [
	".DS_Store",
	".github",
	"**/*.jslt"
]

[dependencies]
chrono = "0.4"
pest = "2.7"
pest_derive = "2.7"
rand = "0.8"
regex-lite = "0.1"
rstest = "0.18"
serde = "1"
serde_json = "1"
sha256 = "1"
thiserror = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[workspace]
members = [
	"node"
]

[workspace.package]
edition = "2021"
repository = "https://github.com/DmitryDodzin/jslt.git"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = "debuginfo"
