[package]
name = "jslt"
description = "Everyones favorite xslt but for json"
version = "0.0.5"
edition.workspace = true
repository.workspace = true
license.workspace = true
exclude = [
	".DS_Store",
	".github",
	"**/*.jslt"
]
default-run = "jslt"

[[bin]]
name = "jslt"
path = "bin/jslt.rs"
required-features = ["binary"]

[dependencies]
jslt-macro = { path = "./macro", version = "0.0.1" }

chrono = "0.4"
clap = { version = "4", features = ["cargo", "derive", "unicode"], optional = true }
clio = { version = "0.3", features = ["clap-parse"], optional = true }
pest = "2.7"
pest_derive = "2.7"
rand = "0.9"
regex-lite = "0.1"
serde = "1"
serde_json = "1"
sha256 = "1"
thiserror = "2"
unescaper = "0.1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = "0.25"

[features]
default = []
binary = [
	"dep:clap",
	"dep:clio"
]

[workspace]
members = [
	"macro",
	"node"
]

[workspace.package]
edition = "2024"
repository = "https://github.com/DmitryDodzin/jslt.git"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = "debuginfo"
