[package]
name = "jslt-macro"
description = ""
version = "0.0.1"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.2"
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
quote = "1"
