[package]
name = "jslt-node"
description = "NodeJS bindings for jslt"
version = "0.0.3"
edition.workspace = true
repository.workspace = true
license.workspace = true
exclude = ["bin/*.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
jslt = { path = "..", version = "0.0.3" }

neon = { version = "1.1.1", default-features = false, features = ["napi-8"] }
serde_json = "1"
